# BURZIO

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
configs/: app_config.example.yaml
examples/: sample_mt5_format.md
examples/data_samples/: EURUSD_H1_sample.csv  GBPUSD_H1_sample_semicolon.csv  USDJPY_H1_with_symbol.csv
src/: __init__.py  main.py
src/config/: __init__.py  loader.py
src/dashboard/: __init__.py  app.py  backtest_service.py  loaders.py
src/data/: __init__.py  mt5_live.py  mt5_parser.py  normalizer.py  schemas.py
src/engine/: __init__.py  backtest_engine.py  events.py  execution_model.py
src/paper/: __init__.py  file_watcher.py  paper_runner.py  state_store.py
src/portfolio/: __init__.py  portfolio_manager.py  position_sizer.py  risk_manager.py
src/reporting/: __init__.py  equity.py  exports.py  metrics.py
src/strategies/: __init__.py  base_strategy.py  breakout.py  ma_crossover.py  signals.py
src/utils/: logging_setup.py  paths.py  time_utils.py
tests/: __init__.py  test_backtest_engine.py  test_dashboard_helpers.py  test_data_ingestion.py  test_mt5_live.py  test_paper_file_watcher.py  test_paper_runner.py  test_paper_state_store.py  test_portfolio_layer.py  test_sanity.py  test_strategies.py
